# subprocess4

./: README.md  pyproject.toml  subprocess4.py  test_subprocess.py
.github/workflows/: ci.yml  publish.yml
